--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -116,3 +116,88 @@
 	border-radius: .25rem;
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+.category_body {
+	align-items: center;
+	border: 1px solid #e8ebed;
+    display: block;
+    height: 70px;
+    background-color: white;
+    z-index: 1030;
+    margin-top: -22px;
+    
+}
+.category_wrapper {
+    margin: 0 auto;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.category_box, .board_box, .neighborhood_box {
+	width: 20%;
+	cursor: pointer;
+}
+.category_span {
+	line-height: 50px;
+    padding-left: 19px;
+    height: 68px;
+    display: block;
+    color: #000;
+    border-left: 1px solid #e8ebed;
+    border-right: 1px solid #e8ebed;
+    font-size: 18px;
+    border-top: 0;
+    border-bottom: 0;
+    font-weight: 700;
+}
+.cat_list_box {
+    width: 978px;
+    position: absolute;
+    left: 12px;
+    padding: 0;
+    border: 1px solid #c9cdd2;
+    background-color: #fff;
+    z-index: 999;
+    display: none;
+    overflow: hidden;
+    border-top: 0;
+    -webkit-overflow-scrolling: touch;
+    padding-right: var(--bs-gutter-x,.75rem);
+    padding-left: var(--bs-gutter-x,.75rem);
+}
+.cat_list_box .cat_list li {
+    float: left;
+    width: 136px;
+    border-right: 1px solid #e8ebed;
+    box-sizing: border-box;
+    height: 50px;
+}
+.cat_list_box .cat_list {
+    width: 860px;
+    float: left;
+}
+.cat_list_box .cat_list li.cat_space {
+    height: 20px;
+}
+.category .cat_link {
+    display: block;
+    margin: 12px 0 12px 7px;
+    cursor: pointer;
+}
+.category_img {
+    vertical-align: top;
+    margin-right: 5px;
+    width: 26px;
+    float: left;
+}
+.category_text {
+    color: #454c53;
+    font-size: 12px;
+    float: left;
+    line-height: 26px;
+}
+.category .cat_link:after {
+    display: block;
+    clear: both;
+    content: "";
+}
