--- a/src/main/resources/templates/myboard.html
+++ b/src/main/resources/templates/myboard.html
@@ -42,7 +42,7 @@
 							<div class="tab_content">
 								<div class="cat_box no_cat_box">
 									<div class="my_specialist_name">
-										<span th:text="|전체 ${p_cnt}|"></span>
+										<span th:text="|전체 ${board_cnt}|"></span>
 									</div>
 								</div>
 								<div class="tab_content">
@@ -50,31 +50,29 @@
 										<div class="infinite-scroll-component "
 											style="height: auto; overflow: auto;">
 											<ul class="mian_row profile_main_row">
-												<th:block th:each="product : ${seller_list}">
+												<th:block th:each="board : ${writer_list}">
 													<li class="main_col_3"><a class="card card_list" style="border: none;">
 															<div class="card_box">
 																<div class="image_wrapper">
 																	<div class="image_outside">
 																		<div class="image_centerbox">
-																			<th:block th:if="${session.client.client_id} == ${product.product_seller_client_id}">
+																			<th:block th:if="${session.client.client_id} == ${board.board_writer_client_id}">
 																				<button class="modifybutton"> 
-																				<img class="modifyimg" th:src="@{/img/modify.png}" th:onclick="|location.href='@{productModify(product_no=${product.product_no})}'|">
+																				<img class="modifyimg" th:src="@{/img/modify.png}" th:onclick="|location.href='@{boardModify(board_no=${board.board_no})}'|">
 																				</button>
 																				<button class="deletebutton" > 
-																				<img class="deleteimg" th:src="@{/img/delete.png}" th:onclick="|location.href='@{productDelete(product_no=${product.product_no})}'|">
+																				<img class="deleteimg" th:src="@{/img/delete.png}" th:onclick="|location.href='@{boardDelete(board_no=${board.board_no})}'|">
 																				</button>
 																			</th:block>	
-																			<img th:src="@{/img/} + ${product.product_img1 }" th:onclick="|location.href='@{product_detail(product_no=${product.product_no})}'|"
-																				class="thumbnail_img" alt="${product.product_name }">
+																			<img th:src="@{/img/} + ${board.board_img1 }" th:onclick="|location.href='@{board_detail(board_no=${board.board_no})}'|"
+																				class="thumbnail_img" alt="${board.board_name }">
 																		</div>
 																	</div>
 																</div>
 																<div class="cont">
 																	<div class="item_title"
-																		th:text="${product.product_name}"></div>
+																		th:text="${board.board_name}"></div>
 																	<div class="item_price profile_price">
-																		<span
-																			th:text="|${#numbers.formatInteger(product.product_price, 3, 'COMMA') + '원'}|"></span>
 																	</div>
 																</div>
 															</div>
