--- a/src/main/resources/templates/boardModify.html
+++ b/src/main/resources/templates/boardModify.html
@@ -3,9 +3,8 @@
 <head th:replace="/fragments/head.html :: fragment-head"></head>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>상품등록</title>
+<title>아나바다</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/productRegister.css}">
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
  <div th:replace="/fragments/header.html :: fragment-header"></div>
@@ -16,113 +15,108 @@
 				<div class="breadcrumbs">
 					<ul>
 						<li><a th:href="@{main}">HOME</a></li>
-						<li>&gt; 상품 등록</li>
+						<li>&gt; 게시물 수정</li>
 					</ul>
 				</div>
 				<div class="regist_top">
 					<div class="regist_box_top">
-						<div>상품 등록</div>
+						<div>게시물 수정</div>
 					</div>
 				</div>
-				<form th:action="product_register" method="post" enctype="multipart/form-data" accept-charset="UTF-8">
+				<form th:action="board_modify" method="post" enctype="multipart/form-data">
 					<div class="regist_box">
 						<div class="description">
 							<dl class="regist_image_dl" id="images_box">
 								<dt>
-									<label style="color: rgb(0, 0, 0);">상품사진</label>
+									<label style="color: rgb(0, 0, 0);">게시물사진</label>
 								</dt>
 								<dd>
 									<div class="container-fluid">
 										<div class="col-md-6">
-											<a>최대 5개까지만 업로드 가능합니다.</a>
+											<a>최대 3개까지만 업로드 가능합니다.</a>
 											<div class="form-group" th:if = "${session.client != null}">
 												<label for="input_img1"> 
 												<img style="width: 100px; height: 100px; display: flex;" th:src="@{/img/pictures.png}">
 												</label> 
-												<input type="file" name="product_img1" id="input_img1"
+												<input type="file" name="board_img1" id="input_img1"
 														class=" user_picked_files" accept="image/*" required /> 
 												<label for="input_img2"> 
 												<img style="width: 100px; height: 100px; display: flex;" th:src="@{/img/pictures.png}">
 												</label> 
-												<input type="file" name="product_img2" id="input_img2"
+												<input type="file" name="board_img2" id="input_img2"
 														class=" user_picked_files" accept="image/*" />
 												<label for="input_img3"> 
 												<img style="width: 100px; height: 100px; display: flex;" th:src="@{/img/pictures.png}">
 												</label> 
-												<input type="file" name="product_img3" id="input_img3"
+												<input type="file" name="board_img3" id="input_img3"
 														class=" user_picked_files" accept="image/*" /> 
-												<label for="input_img4"> 
-												<img style="width: 100px; height: 100px; display: flex;" th:src="@{/img/pictures.png}">
-												</label> 
-												<input type="file" name="product_img4" id="input_img4"
-														class=" user_picked_files" accept="image/*" /> 
-												<label for="input_img5"> 
-												<img style="width: 100px; height: 100px; display: flex;" th:src="@{/img/pictures.png}">
-												</label> 
-												<input type="file" name="product_img5" id="input_img5"
-														class=" user_picked_files" accept="image/*" /> 
-												<input type="hidden" name="product_seller_id" th:value="${session.client.client_id}" >
+												<input type="hidden" name="board_writer_client_id" th:value="${session.client.client_id}" >
 											</div>
 											<ul class="cvf_uploaded_files"></ul>
 										</div>
 									</div>
+									<input type="hidden" name="board_no"
+										th:value="${board.board_no}">
 									<ul class="image_list">
+										<li th:file="${board.board_img1 }"><img class="item_img"
+											th:src="@{/img/} + ${board.board_img1}"> <a href="#"
+											class="cvf_delete_image" title="Cancel"> <img
+												class="delete-btn" th:src="@{/img/delete.png}"></a></li>
+										<th:block th:if="${board.board_img2 != null}">
+										<li th:file="${board.board_img2 }"><img class="item_img"
+											th:src="@{/img/} + ${board.board_img2}"> <a href="#"
+											class="cvf_delete_image" title="Cancel"> <img
+												class="delete-btn" th:src="@{/img/delete.png}"></a></li>
+										</th:block>
+										<th:block th:if="${board.board_img3 != null}">
+										<li th:file="${board.board_img3 }"><img class="item_img"
+											th:src="@{/img/} + ${board.board_img3}"> <a href="#"
+											class="cvf_delete_image" title="Cancel"> <img
+												class="delete-btn" th:src="@{/img/delete.png}"></a></li>
+										</th:block>		
 									</ul>
 								</dd>
 							</dl>
 							<dl id="title">
 								<dt>
-									<label style="color: rgb(0, 0, 0);">상품제목</label>
+									<label style="color: rgb(0, 0, 0);">글 제목</label>
 								</dt>
 								<dd>
-									<input type="text" class="title_input" name="product_name"
-										placeholder="상품 제목을 입력해주세요." value="">
+									<input type="text" class="title_input" name="board_name"
+										placeholder="상품 제목을 입력해주세요." th:value="${board.board_name}">
 									<ul class="item_recommend_box"></ul>
 								</dd>
 							</dl>
-							<dl id="product_category">
+							<dl id="category_board">
 								<dt>
 									<label style="color: rgb(0, 0, 0);">카테고리</label>
 								</dt>
 								<dd>
 									<div class="item_select_box">
-										<select name="product_category_no">
-											<option selected="selected" th:each ="item : ${items}" th:value="${item.category_no}" th:text="${item.category_name}"></option>
+										<select name="board_category_board_no">
+												<th:block th:each ="c : ${category}" >
+											<option th:value="${c.category_board_no}" th:text="${c.category_board_name}"></option>
+												</th:block>
 										</select>
 									</div>
 								</dd>
 							</dl>
 							<dl id="content">
 								<dt>
-									<label style="color: rgb(0, 0, 0);">상품설명</label>
+									<label style="color: rgb(0, 0, 0);">글 내용</label>
 								</dt>
 								<dd>
-									<textarea rows="5" class="introduce" name="product_content"
+									<textarea rows="5" class="introduce" name="board_content"
 										placeholder="상품 설명을 입력해주세요."
-										style="margin: 0px; width: 658px; height: 173px;"></textarea>
+										style="margin: 0px; width: 658px; height: 173px;" th:text="${board.board_content}"></textarea>
 								</dd>
 							</dl>
 							<dl class="sell_method_box">
 								<dt>
-									<label id="price" style="color: rgb(0, 0, 0);">상품가격</label>
+									<label id="price" style="color: rgb(0, 0, 0);">동네위치</label>
 								</dt>
 								<dd>
-									<div class="box_sell_method box_area">
-										<div class="box_price">
-											<input type="text" name="product_price"
-												placeholder="가격을 입력해주세요." value=""
-												style="width: 90%; max-width: 280px; height: 38px;"><span
-												class="input_span_text">원</span>
-										</div>
-									</div>
-								</dd>
-							</dl>
-							<dl id="product_address">
-								<dt>
-									<label style="color: rgb(0, 0, 0);">거래동네</label>
-								</dt>
-								<dd>
-									<input class="input" type="text" id="address" name="product_address" placeholder="주소입력"  readonly="readonly" required="required"> 
+									<input class="input" type="text" id="address" name="board_address" placeholder="주소입력"  th:value="${board.board_address}" readonly="readonly" required="required"> 
 									<input class="input address_select" type="button" value="주소검색" onclick="findAddr()"> 
 									<span class="annotation"></span>
 								</dd>
@@ -131,9 +125,9 @@
 					</div>
 					<div class="item_submit_box">
 						<div class="item_area_submit_box">
-							<a th:href="my_product">
+							<a th:href="@{myboard(client_id=${session.client.client_id})}">
 								<button class="btn_item_cancel" type="button">취소</button>
-							</a> <input class="btn_item_submit" type="submit" value="상품 등록하기">
+							</a> <input class="btn_item_submit" type="submit" value="상품 수정하기">
 						</div>
 					</div>
 				</form>
@@ -167,7 +161,7 @@
 			}).open();
 		});
 	}
-	</script>
+	</script>	
 	<div th:replace="/fragments/footer.html :: fragment-footer"></div>
 </body>
 </html>
