--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -69,6 +69,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" th:src="@{/js/main.js}"></script>
+	<script type="text/javascript" th:src="@{/js/join.js}"></script>
 </body>
 </html>
