--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,6 +7,7 @@
 <title>아나바다</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/css/cookie.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/upScroll.css}">
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=890db594e0dcf442f16354f3d1d351b7&libraries=services,clusterer,drawing"></script>
 </head>
 <body>
@@ -34,7 +35,7 @@
 			</th:block>
 			<div id="add"></div>
 			<button id="get" class="getList"
-				onclick="getList('${StartNo }','${EndNo }')">더보기</button>
+				th:onclick="|getList('${session.startNo }','${session.endNo}')|">더보기</button>
 				<div id="map" style="width:1000px;height:700px;"></div>
 			<div class="scroll_top_btn_warpper">
 				<div class="scroll_top_btn">
@@ -61,16 +62,8 @@
 		<input type="hidden" id="user_address" th:value="${address}">
 	</section>
 	<div th:replace="/fragments/footer.html :: fragment-footer"></div>
-	<script type="text/javascript">
-	function removeCK(cookie_name){
-		var date = new Date();
-		date.setTime(date.getTime() + (-1 * 60 * 60 * 1000));
-		var expires = "; expires=" + date.toGMTString();
-		document.cookie = cookie_name+ "=" + "" + expires + "; path=/ANBD"; 
-		location.reload();
-	}
-	</script>
-	
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+	<script type="text/javascript" th:src="@{/js/cookie.js}"></script>
 	<script th:inline="javascript">
 	var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
     mapOption = { 
@@ -156,6 +149,8 @@
 	        } 
 	    });    
 	}); 
+	
 	</script>
+	<script type="text/javascript" th:src="@{/js/getList.js}"></script>
 </body>
 </html>
